--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   "license": "MIT",
   "dependencies": {
     "gatsby": "^2.26.1",
+    "gatsby-image": "^2.9.0",
     "gatsby-plugin-react-helmet": "^3.8.0",
+    "gatsby-plugin-sharp": "^2.12.2",
+    "gatsby-source-filesystem": "^2.9.1",
+    "gatsby-transformer-sharp": "^2.10.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0"
