Add responsiveness through CSS media queries

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,6 +3,6 @@
   "plugins": ["stylelint-order"],
   "rules": {
     "order/properties-alphabetical-order": true,
-    "rule-empty-line-before": "always"
+    "rule-empty-line-before": ["always", { "ignore": ["first-nested"] }]
   }
 }
