--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "Personal Website",
-  "author": "RichardJonBacon",
+  "author": "RichardBacon",
   "keywords": [
     "gatsby"
   ],
